prevent invisible text while font is loading

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -2,6 +2,7 @@
   font-family: 'Inter';
   font-style:  normal;
   font-display: auto;
+  font-display: swap;
   font-weight: 400;
   src: url("../fonts/Inter-Regular.woff2") format("woff2"),
        url("../fonts/Inter-Regular.woff") format("woff");
@@ -10,6 +11,7 @@
   font-family: 'Inter';
   font-style:  italic;
   font-display: auto;
+  font-display: swap;
   font-weight: 400;
   src: url("../fonts/Inter-Italic.woff2") format("woff2"),
        url("../fonts/Inter-Italic.woff") format("woff");
@@ -19,6 +21,7 @@
   font-family: 'Inter';
   font-style:  normal;
   font-display: auto;
+  font-display: swap;
   font-weight: 600;
   src: url("../fonts/Inter-Medium.woff2") format("woff2"),
        url("../fonts/Inter-Medium.woff") format("woff");
@@ -27,6 +30,7 @@
   font-family: 'Inter';
   font-style:  italic;
   font-display: auto;
+  font-display: swap;
   font-weight: 600;
   src: url("../fonts/Inter-MediumItalic.woff2") format("woff2"),
        url("../fonts/Inter-MediumItalic.woff") format("woff");
@@ -36,6 +40,7 @@
   font-family: 'Inter';
   font-style:  normal;
   font-display: auto;
+  font-display: swap;
   font-weight: 800;
   src: url("../fonts/Inter-Bold.woff2") format("woff2"),
        url("../fonts/Inter-Bold.woff") format("woff");
@@ -44,6 +49,7 @@
   font-family: 'Inter';
   font-style:  italic;
   font-display: auto;
+  font-display: swap;
   font-weight: 800;
   src: url("../fonts/Inter-BoldItalic.woff2") format("woff2"),
        url("../fonts/Inter-BoldItalic.woff") format("woff");
